@@ -23,7 +23,11 @@ Version 2.8.0
   * JavaScript/TypeScript: Fix escapes in backtick strings (#1679, #1686)
   * LESS: Support single-line comments (#1046)
   * Stata: Updated keywords (#1470)
+  
+- Added styles:
 
+  * Material (#1662)
+  
 - The `pygmentize` script now uses `argparse`, all options should work
   as before
 
